crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__edge_cases_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: edge_cases.cm
============================================================
Source code:
func empty() {
    // Empty function - no diagnostics expected
    return();
}

func test_parameter_shadowing(param: felt) {
    let param = 42; // OK: shadowing (might warn in future)
    return();
}

func test_multiple_undeclared() {
    let a = undefined; // Should error: Undeclared variable 'undefined'
    let b = undefined; // Should error: Undeclared variable 'undefined' (may be reported multiple times)
    return();
}

func test_assignment_to_undeclared() {
    undefined = 42; // Should error: Undeclared variable 'undefined'
    return();
}

============================================================
Found 6 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined'
    ╭─[ edge_cases.cm:12:13 ]
    │
 12 │     let a = undefined; // Should error: Undeclared variable 'undefined'
    │             ────┬────  
    │                 ╰────── Undeclared variable 'undefined'
────╯

--- Diagnostic 2 ---
[1003] Error: Duplicate definition of 'param'
   ╭─[ edge_cases.cm:7:9 ]
   │
 7 │     let param = 42; // OK: shadowing (might warn in future)
   │         ──┬──  
   │           ╰──── Duplicate definition of 'param'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'param'
   ╭─[ edge_cases.cm:6:31 ]
   │
 6 │ func test_parameter_shadowing(param: felt) {
   │                               ──┬──  
   │                                 ╰──── Unused variable 'param'
───╯

--- Diagnostic 4 ---
[1002] Warning: Unused variable 'param'
   ╭─[ edge_cases.cm:7:9 ]
   │
 7 │     let param = 42; // OK: shadowing (might warn in future)
   │         ──┬──  
   │           ╰──── Unused variable 'param'
───╯

--- Diagnostic 5 ---
[1002] Warning: Unused variable 'a'
    ╭─[ edge_cases.cm:12:9 ]
    │
 12 │     let a = undefined; // Should error: Undeclared variable 'undefined'
    │         ┬  
    │         ╰── Unused variable 'a'
────╯

--- Diagnostic 6 ---
[1002] Warning: Unused variable 'b'
    ╭─[ edge_cases.cm:13:9 ]
    │
 13 │     let b = undefined; // Should error: Undeclared variable 'undefined' (may be reported multiple times)
    │         ┬  
    │         ╰── Unused variable 'b'
────╯
